# llm-app-action

./: README.md  pyproject.toml  requirements.txt
scripts/: env_check.py
src/: day02_basics.py  day03.py  day04_vector_db.py  hello_llm.py
