[project]
name = "llm-app-action"
version = "0.1.0"
description = ""
authors = [
    {name = "mh_code",email = "hao.ma@scjzcz.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
